# CSC3105_Group14

./: .gitattributes  .gitignore  00_Data_Prep.ipynb  01_Classification.ipynb  02_Regression.ipynb  Data_Analytics_project.ipynb  Exploratory_Data_Analysis.ipynb  ML_Models.ipynb  README.md  UWB_Complete_Notebook.ipynb  pyproject.toml
data/: uwb_preprocessed_for_ml.csv
results/: feature_importance.csv  model_comparison.csv  summary.txt
results/models/: xgboost_model.json
